--- a/Manufacturer/carparts/cv3.html
+++ b/Manufacturer/carparts/cv3.html
@@ -1,21 +1,69 @@
- <div class="col-xs-12" style="margin-top:10px;">
-                                    <form>
-                                        <input type="radio" name="option" id="radio1" checked/>
-                                        <label for="radio1">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-circle-o fa-stack-1x"></i>
-                                                <i class="fa fa-circle fa-stack-1x"></i>
-                                            </span>
-                                            Graphite
-                                        </label> <br>
+ <div class="col-xs-12 select-options" style="margin-top:10px;">
 
-                                         <input type="radio" name="option" id="radio2"/>
-                                        <label for="radio2">
-                                            <span class="fa-stack">
-                                                <i class="fa fa-circle-o fa-stack-1x"></i>
-                                                <i class="fa fa-circle fa-stack-1x"></i>
-                                            </span>
-                                            Silver
-                                        </label> <br>
 
-                                </div>
+    <h4> Color Options </h4>
+        <fieldset>
+
+            <input type="radio" name="option" id="radio1" checked/>
+            <label for="radio1">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-o fa-stack-1x"></i>
+                    <i class="fa fa-circle fa-stack-1x"></i>
+                </span>
+                Silver
+            </label> <br>
+
+             <input type="radio" name="option" id="radio2"/>
+            <label for="radio2">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-o fa-stack-1x"></i>
+                    <i class="fa fa-circle fa-stack-1x"></i>
+                </span>
+                Graphite
+            </label> <br>
+
+        </fieldset>
+
+    <h4>Size Options </h4>
+
+         <fieldset>
+
+            <input type="radio" name="size" id="radio4" checked/>
+            <label for="radio4">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-o fa-stack-1x"></i>
+                    <i class="fa fa-circle fa-stack-1x"></i>
+                </span>
+                19"
+            </label> <br>
+
+             <input type="radio" name="size" id="radio5"/>
+            <label for="radio5">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-o fa-stack-1x"></i>
+                    <i class="fa fa-circle fa-stack-1x"></i>
+                </span>
+                20"
+            </label> <br>
+
+            <input type="radio" name="size" id="radio6"/>
+            <label for="radio6">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-o fa-stack-1x"></i>
+                    <i class="fa fa-circle fa-stack-1x"></i>
+                </span>
+                21"
+            </label> <br>
+
+            <input type="radio" name="size" id="radio7"/>
+            <label for="radio7">
+                <span class="fa-stack">
+                    <i class="fa fa-circle-o fa-stack-1x"></i>
+                    <i class="fa fa-circle fa-stack-1x"></i>
+                </span>
+                22"
+            </label> <br>
+        </fieldset>
+
+
+</div>
