--- a/manufacturer-jdm.html
+++ b/manufacturer-jdm.html
@@ -80,6 +80,7 @@
   </div>
 </div>
 
+<div class="hide-toggle" href="#"><img src="img/fullscreen.png"></div>
 
     <!-- Navigation -->
 <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
@@ -111,6 +112,8 @@
 
 
 <!--     <div class="row"> -->
+
+
 
 <div class= "col-xs-3 ">
     <div class="sidebar-container">
