--- a/manufacturer-vossen.html
+++ b/manufacturer-vossen.html
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-
+<div class="hide-toggle" href="#"><img src="img/fullscreen.png"></div>
     <!-- Navigation -->
 <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
 
