--- a/platform.html
+++ b/platform.html
@@ -80,6 +80,7 @@
 </div>
 
 <div class="hide-toggle" href="#"><img src="img/fullscreen.png"></div>
+
     <!-- Navigation -->
 <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
 
@@ -108,9 +109,10 @@
     </ul>
 </nav>
 
-<div id="hide-wrapper">
 
 <!--     <div class="row"> -->
+
+<div id="hide-wrapper">
 
 <div class= "col-xs-3 ">
     <div class="sidebar-container">
@@ -720,12 +722,10 @@
     </div>
 </div> <!--row-->
 
+</div>
 
 
-
-
-
-    </div>
+    
 
 
     <!-- Header -->
@@ -750,8 +750,6 @@
 
     <!-- Custom Theme JavaScript -->
     <script>
-
-
     // Closes the sidebar menu
     // $("#menu-close").click(function(e) {
     //     e.preventDefault();
@@ -790,7 +788,7 @@
                 
 <script src="js/owl.carousel.min.js"></script>  
 <!---->
-<script src="../js/ajax_script.js"></script>
+
 <!--Dropdown styling-->
 <link href="css/select2.css" rel="stylesheet" />
 <script src="js/select2.js"></script>
@@ -798,7 +796,7 @@
   $('.selectpicker').select2();
 </script>
 
- 
+ <script src="js/ajax_script.js"></script>
  <script src="js/sidebar-sliders.js"></script>
  <script src="js/dropdown-car.js"></script>
 
