rename javascript files

--- a/manufacturer-vossen.html
+++ b/manufacturer-vossen.html
@@ -826,7 +826,7 @@
   $('.selectpicker').select2();
 </script>
 
- <script src="js/manufacturer_script.js"></script>
+ <script src="js/vossen_script.js"></script>
  <script src="js/sidebar-sliders.js"></script>
   <script src="js/dropdown-car.js"></script>
   <script type="text/javascript" src="js/jquery.wheelcolorpicker.js"></script>
