--- a/platform.html
+++ b/platform.html
@@ -796,7 +796,7 @@
   $('.selectpicker').select2();
 </script>
 
- <script src="js/ajax_script.js"></script>
+ <script src="js/platform.js"></script>
  <script src="js/sidebar-sliders.js"></script>
  <script src="js/dropdown-car.js"></script>
 
